Pipeline/java_lang_management/java_lang_managementOutputResult.txt
Sample: LockInfo_4
----------------------------------------------------------------
================================================================

Sample: ManagementFactory_1
----------------------------------------------------------------
stdout:
Name: G1 Young Generation
Collection count: 0
Collection time: 0
Pool names: [Ljava.lang.String;@76329302

Name: G1 Old Generation
Collection count: 0
Collection time: 0
Pool names: [Ljava.lang.String;@5e25a92e


================================================================

Sample: ManagementFactory_2
----------------------------------------------------------------
stdout:
Heap Memory Usage: init = 1325400064(1294336K) used = 33472512(32688K) committed = 1358954496(1327104K) max = 21005074432(20512768K)
Non-Heap Memory Usage: init = 7667712(7488K) used = 16586632(16197K) committed = 19267584(18816K) max = -1(-1K)

================================================================

Sample: ManagementFactory_3
----------------------------------------------------------------
output:
./java_lang_management/javaFiles/ManagementFactory_3.java:12: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getCommittedVirtualMemorySize());
                                                ^
  symbol:   method getCommittedVirtualMemorySize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:13: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getFreePhysicalMemorySize());
                                                ^
  symbol:   method getFreePhysicalMemorySize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:14: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getFreeSwapSpaceSize());
                                                ^
  symbol:   method getFreeSwapSpaceSize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:15: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getProcessCpuLoad());
                                                ^
  symbol:   method getProcessCpuLoad()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:16: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getProcessCpuTime());
                                                ^
  symbol:   method getProcessCpuTime()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:17: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getSystemCpuLoad());
                                                ^
  symbol:   method getSystemCpuLoad()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:18: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getSystemCpuLoad());
                                                ^
  symbol:   method getSystemCpuLoad()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:20: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getTotalPhysicalMemorySize());
                                                ^
  symbol:   method getTotalPhysicalMemorySize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:21: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getTotalSwapSpaceSize());
                                                ^
  symbol:   method getTotalSwapSpaceSize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:22: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getCommittedVirtualMemorySize());
                                                ^
  symbol:   method getCommittedVirtualMemorySize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:23: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getFreePhysicalMemorySize());
                                                ^
  symbol:   method getFreePhysicalMemorySize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:24: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getFreeSwapSpaceSize());
                                                ^
  symbol:   method getFreeSwapSpaceSize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:25: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getProcessCpuLoad());
                                                ^
  symbol:   method getProcessCpuLoad()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:26: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getProcessCpuTime());
                                                ^
  symbol:   method getProcessCpuTime()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:27: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getSystemCpuLoad());
                                                ^
  symbol:   method getSystemCpuLoad()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:29: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getTotalPhysicalMemorySize());
                                                ^
  symbol:   method getTotalPhysicalMemorySize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
./java_lang_management/javaFiles/ManagementFactory_3.java:30: error: cannot find symbol
        System.out.println(operatingSystemMXBean.getTotalSwapSpaceSize());
                                                ^
  symbol:   method getTotalSwapSpaceSize()
  location: variable operatingSystemMXBean of type OperatingSystemMXBean
17 errors


================================================================

Sample: ManagementFactory_4
----------------------------------------------------------------
stdout:
com.sun.management.internal.HotSpotThreadImpl@481a15ff

================================================================

Sample: MemoryUsage_1
----------------------------------------------------------------
stdout:
Initial memory (in bytes) that the JVM allocated for the heap: 1325400064

================================================================

Sample: MemoryUsage_2
----------------------------------------------------------------
stdout:
Used Memory: 33472512 bytes

================================================================

Sample: MemoryUsage_3
----------------------------------------------------------------
stdout:
Committed memory: 1358954496 bytes

================================================================

Sample: MemoryUsage_4
----------------------------------------------------------------
stdout:
Maximum size of the memory pool: 21005074432

================================================================

